<resources>
    <string name="app_name">AppGuitarHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_login">Login</string>
    <string name="login_title">LOGIN</string>
    <string name="login_email">E-mail</string>
    <string name="login_pwd">Senha</string>
    <string name="login_btn">Login</string>
    <string name="login_register">Cadastre-se</string>
    <string name="register_user_title">Cadastre-se</string>
    <string name="login_cpwd">Confirme sua Senha</string>
    <string name="register_user_cancel">Cancelar</string>
    <string name="register_user_submit">Cadastrar</string>
    <string name="action_logout">Sair</string>
    <string name="menu_register">Cadastrar</string>
    <string name="name">Nome</string>
    <string name="description">Descrição</string>
    <string name="type">Interesse em</string>
    <string name="contact">Contato</string>
    <string name="btn_register">Cadastrar</string>
    <string name="btn_delete">Deletar</string>
    <string name="btn_edit">Editar</string>
    <string name="menu_listing">Listar</string>
    <string name="btn_contact">Entrar em contato</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_support">Fale Conosco</string>
</resources>