<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_listing"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_listing" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_mail"
                android:title="@string/menu_support" />
        </menu>
    </item>
</menu>