<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    android:backgroundTint="@color/orange_500"
    app:cardCornerRadius="@dimen/radius"
    app:cardElevation="4dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right"
                android:paddingHorizontal="@dimen/padding_lg">
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_contact"
                    android:tint="@color/white"
                    android:backgroundTint="@color/orange_200"
                    app:srcCompat="@drawable/ic_contact"
                    app:cardCornerRadius="@dimen/radius"
                    />
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_delete"
                    android:tint="@color/white"
                    android:backgroundTint="@color/orange_200"
                    app:srcCompat="@drawable/ic_delete"
                    app:cardCornerRadius="@dimen/radius"
                    />
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_edit"
                    android:tint="@color/white"
                    android:backgroundTint="@color/orange_200"
                    app:srcCompat="@drawable/ic_edit"
                    app:cardCornerRadius="@dimen/radius"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>
