<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutName"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:boxBackgroundColor="@null"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtName"
            android:hint="@string/name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutDescription"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:maxLength="10"
        app:boxBackgroundColor="@null"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtDescription"
            android:hint="@string/description"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutType"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:maxLength="100"
        app:boxBackgroundColor="@null"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtType"
            android:hint="@string/type"
            android:inputType="textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutContact"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:maxLength="100"
        app:boxBackgroundColor="@null"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtContact"
            android:hint="@string/contact"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange_500"
        android:textColor="@color/white"
        android:text="@string/btn_register"/>

</androidx.appcompat.widget.LinearLayoutCompat>